--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Presupuesto de Ortopedia</title>
-        <link rel="stylesheet" src="styles.css">
+        <link rel="stylesheet" href="styles.css">
         
     </head>
 
