--- a/presupuesto.html
+++ b/presupuesto.html
@@ -32,20 +32,16 @@
 
             <section class="inversion">
                 <div class="subtitulo">Inversión</div>
-                <div id="cuota1" class="txt">&lt;&lt;TRIM([cuota1])&gt;&gt;</div>
-                <div id="cuota2" class="txt">&lt;&lt;TRIM([cuota2])&gt;&gt;</div>
-                <div id="cuota3" class="txt">&lt;&lt;TRIM([cuota3])&gt;&gt;</div>
-                <div id="cuota4" class="txt">&lt;&lt;TRIM([cuota4])&gt;&gt;</div>
-                <div id="cuota5" class="txt">&lt;&lt;TRIM([cuota5])&gt;&gt;</div>
-                <div id="cuota6a12" class="txt">&lt;&lt;TRIM([cuota6a12])&gt;&gt;</div>
+                <div id="cuota1" class="txt"></div>
+                <div id="cuota3" class="txt"></div>
+                <div id="cuota2" class="txt"></div>
+                <div id="cuota4" class="txt"></div>
+                <div id="cuota5" class="txt"></div>
+                <div id="cuota6a12" class="txt"></div>
             </section>
 
             <section class="tyc">
                 <ul>
-                    <li>
-                        Las cuotas mensuales deben estar al día para realizar el
-                        ajuste y/o control del tratamiento.
-                    </li>
                     <li>
                         Finalizado el tiempo de la primera etapa (12 meses
                         aproximadamente) se toman nuevas impresiones para
