nueva version mas ancha. menos alta.

--- a/presupuesto.html
+++ b/presupuesto.html
@@ -9,8 +9,7 @@
 
     <body>
         <button id="dl-png" class="boton">Descargar</button>
-        <br>
-
+        
         <section id="fotop" class="container">
             <section class="cabecera">
                 <div class="logo">
@@ -33,8 +32,8 @@
             <section class="inversion">
                 <div class="subtitulo">Inversión</div>
                 <div id="cuota1" class="txt"></div>
-                <div id="cuota3" class="txt"></div>
                 <div id="cuota2" class="txt"></div>
+                <div id="cuota3" class="txt"></div>
                 <div id="cuota4" class="txt"></div>
                 <div id="cuota5" class="txt"></div>
                 <div id="cuota6a12" class="txt"></div>
@@ -48,12 +47,12 @@
                         recambio de aparatología. Tendrá un nuevo presupuesto.
                     </li>
                     <li>No incluye pérdida o roturas del aparato.</li>
+                    <li id="fecha"></li>
                 </ul>
             </section>
 
             <section class="pie">
                 <div class="firma">Dra. Cecilia Zaffaroni</div>
-                <div id="fecha" class="fecha"></div>
             </section>
         </section>
 
