--- a/presupuesto.html
+++ b/presupuesto.html
@@ -9,9 +9,9 @@
     </head>
 
     <body>
-        <button id="dl-png" class="boton">Descargar</button>
+        <button id="dl-png" class="boton">Descargar IMAGEN</button>
         <script src="descargapng.js"></script>
-        
+
         <section id="fotop" class="container">
             <section class="cabecera">
                 <div class="logo">
@@ -43,14 +43,11 @@
 
             <section class="tyc">
                 <ul>
-                    <li>
-                        Finalizado el tiempo de la primera etapa (12 meses
-                        aproximadamente) se toman nuevas impresiones para
-                        recambio de aparatología. Tendrá un nuevo presupuesto.
-                    </li>
-                    <li>No incluye pérdida o roturas del aparato.</li>
+                    <div id="tyc1" class="tycc"></div>
+                    <div id="tyc2" class="tycc"></div>
+                    <div id="tyc3" class="tycc"></div>
                 </ul>
-            </section>
+             </section>
             
             <section class="pie">
                 <div class="firma">Dra. Cecilia Zaffaroni</div>
